Fixed portfolio miniatures on small devices

--- a/scss/flex.scss
+++ b/scss/flex.scss
@@ -95,3 +95,42 @@
     width: 1025px;
   }
 }
+@media (min-width: 600px) and (max-width: 1100px){
+  .project{
+    max-width: 400px;
+  }
+  .five{
+    max-width:600px;
+  }
+  .about{
+    text-align: center;
+    .lineOne{
+      background-image: linear-gradient(to right, rgba(116, 116, 116, 0), rgba(116, 116, 116, 0.75), rgba(116, 116, 116, 0));
+    }
+    h2{
+      text-align: center;
+    }
+    p{
+      padding-left-right: 20px;
+      text-align: center;
+    }
+  }
+}
+@media (max-width: 600px){
+  .project{
+    max-width: 400px;
+  }
+  .about{
+    text-align: center;
+    .lineOne{
+      background-image: linear-gradient(to right, rgba(116, 116, 116, 0), rgba(116, 116, 116, 0.75), rgba(116, 116, 116, 0));
+    }
+    h2{
+      text-align: center;
+    }
+    p{
+      padding-left-right: 20px;
+      text-align: center;
+    }
+  }
+}
